# PureOpencv

./: opencv-install.sh
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.c0acf68  clear_cmake_cache.sh  cmake_install.cmake  cmake_usage.txt  src  src.cbp
src/cut_img/: CMakeLists.txt  cmake_install.cmake  cut_img  cut_img.cbp  cut_img.cpp  cut_img.hpp  test.cpp
src/first_video/: CMakeLists.txt  cmake_install.cmake  first_video  first_video.cbp  first_video.cpp
src/first_window/: CMakeLists.txt  cmake_install.cmake  first_window  first_window.cbp  first_window.cpp
src/flann_feature/: CMakeLists.txt  cmake_install.cmake  flann_feature  flann_feature.cbp  hmc  hmc.cbp  hmc.cpp  test.sh
src/image_smooth/: CMakeLists.txt  cmake_install.cmake  image_smooth  image_smooth.cbp  image_smooth.cpp
src/opt_mat/: CMakeLists.txt  cmake_install.cmake  opt_mat  opt_mat.cbp  opt_mat.cpp
src/pano_img_viewer/: CMakeLists.txt  cmake_install.cmake  pano_img_viewer.cbp  pano_img_viewer.cpp  pano_img_viewer.hpp
src/plyfile/: CMakeLists.txt  cmake_install.cmake  plyfile  plyfile.cbp  plyfile.cpp  plyfile.hpp  table_math.hpp  test.cpp
src/roi/: CMakeLists.txt  cmake_install.cmake  roi  roi.cbp  roi.cpp
src/sift/: CMakeLists.txt  cmake_install.cmake  sift  sift.cbp  sift.cpp  test.sh
src/uv_pano_img/: CMakeLists.txt  cmake_install.cmake  test.cpp  test.sh  test2.sh  uvimg  uvimg.cbp  uvimg.cpp  uvimg.hpp
src/write_video/: CMakeLists.txt  cmake_install.cmake  write_video  write_video.cbp  write_video.cpp
